--- a/guides/templates/guide.adoc
+++ b/guides/templates/guide.adoc
@@ -7,6 +7,7 @@
 :guide-priority: ${priority}
 :guide-tile-visible: ${tileVisible}
 :version: ${version}
+:project_versionNpm: ${version}
 
 include::../attributes.adoc[]
 
