Incorrectly resolved {project_versionNpm} expression in the documentation closes #562
Signed-off-by: mposolda <mposolda@gmail.com>

--- a/guides/templates/guide.adoc
+++ b/guides/templates/guide.adoc
@@ -7,6 +7,7 @@
 :guide-priority: ${priority}
 :guide-tile-visible: ${tileVisible}
 :version: ${version}
+:version_nodejs_adapter: ${version}
 
 include::../attributes.adoc[]
 
